--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
+              <h3 class="mb-0">Leeds Trinity University</h3>
+              <div class="subheading mb-3">Bachelor of Arts</div>
               <div>Computer Science - Web Development Track</div>
               <p>GPA: 3.23</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">September 2017 - July 2020</span>
             </div>
           </div>
 
