--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Tim
+          <h1 class="mb-0">Timothy
             <span class="text-primary">Fielden</span>
           </h1>
           <div class="subheading mb-5">320 Kirkstall Hall, Leeds Trinity University · Horsforth, LS18 5HD · 07702 495348 ·
