--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Leeds Trinity University</h3>
               <div class="subheading mb-3">Bachelor of Arts</div>
-              <div>Computer Science - Web Development Track</div>
+              <div>Film</div>
               <p>GPA: 3.23</p>
             </div>
             <div class="resume-date text-md-right">
@@ -161,12 +161,13 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
+              <h3 class="mb-0">Burnley College</h3>
+              <div class="subheading mb-3">BTEC</div>
+              <div>Creative Media Production</div>
               <p>GPA: 3.56</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">September 2014 - May 2017</span>
             </div>
           </div>
 
