--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">320 Kirkstall Hall, Leeds Trinity University · Horsforth, LS18 5HD · 07702 495348 ·
             <a href="mailto:name@email.com">zduvvian@hotmail.co.uk</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">I am a Film student at Leeds Trinity University. I aspire to be a screenwriter.</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
