--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Filmmaker</h3>
+              <div class="subheading mb-3">AVSED</div>
+              <p>I filmed a promotional video for AVSED, which was well-recieved by the other workers.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2013 - Present</span>
