--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Filmmaker</h3>
               <div class="subheading mb-3">AVSED</div>
-              <p>I filmed a promotional video for AVSED, which was well-recieved by the other workers.</p>
+              <p>I filmed a promotional video for AVSED for my first placement, which was well-recieved by the other workers.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">May 2018 - June 2018</span>
             </div>
           </div>
 
