--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              Student Oscar for Best Animation</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Mobile Web Specialist - Google Certification</li>
