--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
+		  <li class="nav-item">
+		    <a class="nav-link js-scroll-trigger" href="#previouswork">Previous Work</a>
+			</li>
         </ul>
       </div>
     </nav>
