--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 	  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="previouswork"
 	    <div class="my-auto">
 		  <h2 class="mb-5">Examples of Previous Work</h2>
-		  <p>Below are examples of projects I have made or help make in the past. Coming eventually.</p>
+		  <p>Below are examples of projects I have made or help make in the past. &#40Coming eventually.&#40</p>
 		  </ul>
 		</div>
 	  </section>
